📃 docs(app.yml): add description

--- a/app.yml
+++ b/app.yml
@@ -128,7 +128,7 @@ default_permissions:
 url: https://github.com/AndPuQing/hackthon-bot
 
 # A description of the GitHub App.
-# description: A description of my awesome app
+description: A GitHub App built with probot that automates issue management for hackthon.
 
 # Set to true when your GitHub App is available to the public or false when it is only accessible to the owner of the app.
 Default: true
